environments/istio/ambient-demo/uniform-apps/apps/20-namespace-app/ambient/virtualservice.yaml

---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: ingress-gw
  namespace: istio-system
spec:
  hosts:
    - "*"
  gateways:
  - istio-system/http-gateway
  http:
  - name: "ns-5"
    match:
    - uri:
        exact: "/ns-5"
    route:
    - destination:
        host: tier-1-app-a.ns-5.svc.cluster.local
        port:
          number: 8080
  - name: "ns-4"
    match:
    - uri:
        exact: "/ns-4"
    route:
    - destination:
        host: tier-1-app-a.ns-4.svc.cluster.local
        port:
          number: 8080
  - name: "ns-3"
    match:
    - uri:
        exact: "/ns-3"
    route:
    - destination:
        host: tier-1-app-a.ns-3.svc.cluster.local
        port:
          number: 8080
  - name: "ns-2"
    match:
    - uri:
        exact: "/ns-2"
    route:
    - destination:
        host: tier-1-app-a.ns-2.svc.cluster.local
        port:
          number: 8080
  - name: "ns-1"
    match:
    - uri:
        exact: "/ns-1"
    route:
    - destination:
        host: tier-1-app-a.ns-1.svc.cluster.local
        port:
          number: 8080
---
